alignment fix

--- a/evaluation/frontend/src/components/OrchestratorResultTable.module.scss
+++ b/evaluation/frontend/src/components/OrchestratorResultTable.module.scss
@@ -5,8 +5,8 @@
 }
 
 .container {
-  display: 'flex';
-  justify-content: 'space-between';
-  flex-direction: 'column';
-  align-items: 'center';
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
